--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.apache.ignite</groupId>
     <artifactId>DuckAirlines-project</artifactId>
-    <version>2.5.3</version>
+    <version>2.6.0</version>
 
     <repositories>
         <repository>
@@ -20,22 +20,22 @@
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-core</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-spring</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-indexing</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-rest-http</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
@@ -46,6 +46,11 @@
             <groupId>com.mchange</groupId>
             <artifactId>mchange-commons-java</artifactId>
             <version>0.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
         </dependency>
     </dependencies>
 
